# perftest

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: streaming_test.yaml.example
perftest/: __main__.py  cli.py  main.py
perftest/clients/: http_client.py  victoria_metrics.py
perftest/collectors/: metrics_collector.py
perftest/core/: config.py  logger.py
perftest/formatters/: console.py
perftest/models/: config.py  metrics.py
perftest/services/: test_runner.py
perftest/utils/: errors.py
